--- a/maven2/pom.xml
+++ b/maven2/pom.xml
@@ -22,6 +22,13 @@
 			<version>4.1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>cn.gyyx.util</groupId>
+			<artifactId>MathUtil</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
