--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,8 @@
   <packaging>pom</packaging>
 
   <modules>
-   <module>logic</module>
     <module>maven</module>
-    <module>maven2</module>
-	 <module>as</module>
+    <module>mathutil</module>
 	 	
 
    
