--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>maven</module>
+    <module>maven1</module>
     <module>mathutil</module>
 	 	
 
